--- a/exams-react/src/components/Accordion/accordion.css
+++ b/exams-react/src/components/Accordion/accordion.css
@@ -3,6 +3,14 @@ label {
     margin: auto 0;
 }
 
+header {
+    position: fixed;
+    top:0;
+    width:40%;
+}
+header h1 {
+    text-align: center;
+}
 .accordion {
     width: 100%;
     margin: auto;
@@ -20,11 +28,14 @@ label {
     margin: auto;
 }
 
-#accordion-item {
-    background-color: rgba(202, 240, 248, 0.8);
-    border-radius: 10px;
-    box-shadow: 2px 16px 32px rgba( 3, 4, 94,0.66);
-    margin: 5px;
+.myDiv{
+    margin-top: 100px;
+}
+.accordion-item {
+    background-color: rgba(202, 240, 248, 0.8)!important;
+    border-radius: 10px!important;
+    box-shadow: 2px 16px 32px rgba( 3, 4, 94,0.66)!important;
+    margin: 5px!important;
 }
 
 #delete-icon, #save-icon {
@@ -39,5 +50,9 @@ label {
 @media (max-width: 768px){
     .accordion-container {
         max-width: 80%;
+    }
+
+    header {
+        width:80%;
     }
 }
