--- a/frontend/src/components/Accordion/accordion.css
+++ b/frontend/src/components/Accordion/accordion.css
@@ -4,38 +4,67 @@ label {
 }
 
 header {
-    position: fixed;
     top:0;
-    width:40%;
+    width: 49.5%;
+    margin: auto;
 }
+
 header h1 {
     text-align: center;
 }
+
 .accordion {
     width: 100%;
     margin: auto;
 }
 
-.MuiTextField-root {
-    width: 50%;
-    position: center;
+.MuiFormControl-root {
+    width: 100%;
+    margin: 4% 0 !important;
+}
+
+.MuiTypography-root {
+    width: 100%;
+}
+
+.MuiInputBase-root {
+    width: 100% !important;
+}
+
+.flex-container {
+    display: flex;
+}
+
+.container1, .container2 {
+    flex: 49%;
+}
+
+.container2 {
+    margin-left: 2%;
+}
+
+.examsDataFirst {
+    width: 100% !important;
+    margin: 0 0 2% 0 !important;
 }
 
 .accordion-container {
     width: 100%;
     min-width: 310px;
-    max-width: 600px;
+    max-width: 700px; /*600px*/
     margin: auto;
 }
 
-.myDiv{
-    margin-top: 100px;
+.myDiv {
+    margin-top: 15px;
 }
+
 .accordion-item {
-    background-color: rgba(202, 240, 248, 0.8)!important;
-    border-radius: 10px!important;
-    box-shadow: 2px 16px 32px rgba( 3, 4, 94,0.66)!important;
-    margin: 5px!important;
+    background-color: rgba(202, 240, 248, 0.8) !important;
+    border-radius: 10px !important;
+    box-shadow: 2px 16px 32px rgba( 3, 4, 94,0.66) !important;
+    margin: 5px !important;
+    padding: 1% 1.5%;
 }
 
 #delete-icon, #save-icon {
@@ -47,7 +76,8 @@ header h1 {
     border-color: rgba(3, 4, 94, 1);
 }
 
-@media (max-width: 768px){
+@media (max-width: 768px) {
+
     .accordion-container {
         max-width: 80%;
     }
@@ -55,4 +85,13 @@ header h1 {
     header {
         width:80%;
     }
+
+}
+
+@media (max-width: 576px) {
+
+    .flex-container {
+        display: block;
+    }
+
 }
